--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Temporary Items
 
 ## User settings
 xcuserdata/
+NewsWave/NewsWave/Service/apikeys.plist
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
