--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ xcuserdata
 
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,swiftpm,swiftpackagemanager,macos,xcode,xcodeinjection
+NewsWave/NewsWave/Service/apikeys.plist
